--- a/media/uploader.css
+++ b/media/uploader.css
@@ -112,17 +112,18 @@ body {
       border-radius: 5px;
       border: 2px dashed #3d464e;
       text-align: center; }
-  #container .msg {
-    color: #c44d58; }
   #container li {
     position: relative;
     height: 150px;
     width: 150px;
     padding: 5px;
-    border: 1px solid #333333;
+    border: 1px solid rgba(51, 51, 51, 0);
     border-radius: 5px; }
     #container li:hover {
       border-color: #4ecdc4; }
+    #container li.msg {
+      color: #c44d58;
+      border: none; }
     #container li img {
       position: absolute;
       clip: rect(0, 150px, 150px, 0); }
